src/test/deca/context/invalid/resultats/test16_void-cont.res
./src/test/deca/context/invalid/test16_void.deca:16:6: Cannot declare a variable of type void
